--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,9 @@ quarkus.datasource.jdbc.url=jdbc:mariadb://db:3306/fruit
 
 #quarkus.datasource.start-container=true
 
+# Flyway minimal config properties
+quarkus.flyway.migrate-at-start=true
+
 # drop and create the database at startup (use `update` to only update the schema)
 %dev.quarkus.datasource.jdbc.url=jdbc:mariadb://localhost:3306/fruit
 %dev.quarkus.hibernate-orm.database.generation=create
